--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-bootstrap": "^2.1.2",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^7.0.1"
   }
 }
